--- a/build.gradle
+++ b/build.gradle
@@ -30,5 +30,5 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClassName = 'complexrobot.App'
+    mainClassName = 'complexrobot.rmiServer'
 }
